# peewee-async

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  Pipfile  README.md  aiopeewee.py  docker-compose.yml  peewee_async.py  peewee_async_compat.py  peewee_asyncext.py  pyproject.toml  setup.cfg  setup.py  tests.ini.sample  tests.json.sample  tests.py  tests_3_5.py
.github/workflows/: ci.yml  deploy.yml  tests.yml
docs/: Makefile  Requirements  conf.py  index.rst  make.bat  requirements.txt
docs/aiopeewee/: api.rst  examples.rst
docs/peewee_async/: api.rst  api_older.rst  connection.rst  examples.rst  installing.rst  quickstart.rst  signals.rst  testing.rst  tornado.rst  transaction.rst
docs/samples/: quickstart.py
examples/: Dockerfile  README.md  aiohttp_example.py  docker-compose.yaml  requirements.txt  tornado_sample.py
load-testing/: README.md  aiopg_app.py  app.py  load.yaml  psycopg_app.py  requirements.txt
peewee_async/: __init__.py  aio_model.py  connection.py  database.py  databases.py  helpers.py  manager.py  mysql.py  pg.py  pool.py  queries.py  result.py  result_wrappers.py  signals.py  sync_utils.py  testing.py  transactions.py  utils.py
src/: async_db.py  manager.py  mysql.py  postgres.py  queries.py  transactions.py  utils.py
tests/: __init__.py  conftest.py  db_config.py  models.py  test_common.py  test_compat.py  test_database.py  test_deleting.py  test_inserting.py  test_obsolete.py  test_prefetch.py  test_shortcuts.py  test_signals.py  test_testing.py  test_transaction.py  test_updating.py  tests_py35.py  utils.py
tests/aio_model/: test_deleting.py  test_inserting.py  test_selecting.py  test_shortcuts.py  test_table_queries.py  test_updating.py
tests/compat/: conftest.py  test_common.py  test_compat.py  test_deleting.py  test_inserting.py  test_shortcuts.py  test_transaction.py  test_updating.py
