[tool.poetry]
name = "peewee-async"
version = "1.2.0"
description = "Asynchronous interface for peewee ORM powered by asyncio."
authors = ["Alexey Kinev <rudy@05bit.com>", "Gorshkov Nikolay(contributor) <nogamemorebrain@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.15.4"
typing-extensions = "^4.12.2"

aiopg = { version = "^1.4.0", optional = true }
aiomysql = { version = "^0.2.0", optional = true }
cryptography = { version = "^43.0.1", optional = true }
pytest = { version = "^7.4.1", optional = true }
pytest-asyncio = { version = "^0.21.1", optional = true }
pytest-mock = { version = "^3.14.0", optional = true }
sphinx = { version = "^7.1.2", optional = true }
sphinx-rtd-theme = { version = "^1.3.0rc1", optional = true }
mypy = { version = "^1.10.1", optional = true }
types-PyMySQL = { version = "^1.1.0.20240524", optional = true }
psycopg = { version = "^3.2.0", optional = true }
psycopg-pool = { version = "^3.2.0", optional = true }

[tool.poetry.extras]
postgresql = ["aiopg"]
mysql = ["aiomysql", "cryptography"]
develop = ["aiopg", "aiomysql", "cryptography", "pytest", "pytest-asyncio", "pytest-mock", "mypy", "types-PyMySQL", "psycopg", "psycopg-pool"]
docs = ["aiopg", "aiomysql", "cryptography", "sphinx", "sphinx-rtd-theme"]
psycopg = ["psycopg", "psycopg-pool"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = "(venv|load-testing|examples|docs)"

[tool.pytest.ini_options]
asyncio_mode = "auto"