[project]
name = "peewee-async"
version = "1.2.1"
description = "Asynchronous interface for peewee ORM powered by asyncio."
authors = [
    {name = "Alexey Kinev", email="rudy@05bit.com"},
    {name = "Gorshkov Nikolay", email = "nogamemorebrain@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "peewee>=3.15.4",
    "typing-extensions>=4.12.2"
]


[project.optional-dependencies]
postgresql = [
    "aiopg>=1.4.0",
]
mysql = [
    "aiomysql>=0.2.0",
    "cryptography>=43.0.1"
]
psycopg = [
    "psycopg>=3.2.0",
    "psycopg-pool>=3.2.0"
]
docs = [
    "Sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.1.0",
]
dev = [
    "pytest==7.4.1",
    "pytest-asyncio==0.21.1",
    "pytest-mock>=3.14.0",
    "peewee-async[postgresql]",
    "peewee-async[mysql]",
    "peewee-async[psycopg]",
    "mypy>=1.19.0",
    "ruff==0.15.1",
    "types-PyMySQL>=1.1.0",
    "poethepoet==0.41.0"
]

[tool.ruff]
line-length = 120
exclude = [
    "docs",
    "load-testing"
]

[tool.ruff.lint]
select = [
    'A',
    'B',
    'C',
    'E',
    'F',
    'G',
    'I',
    'DTZ',
    'TC',
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "peewee_async"
module-root = ""

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = "(venv|load-testing|examples|docs)"

[tool.pytest.ini_options]
asyncio_mode = "auto"



[tool.poe.executor]
type = "simple"


[tool.poe.tasks.lint]
help = "Run the type checker"
cmd  = "ruff check"

[tool.poe.tasks.types]
help = "Run the type checker"
cmd  = "mypy ."

[tool.poe.tasks.check_format]
help = "Run the format checker"
cmd  = "ruff format --check"

[tool.poe.tasks.format_by_checker]
help = "Run the check formater"
cmd  = "ruff check --fix-only -e"

[tool.poe.tasks.format_by_formatter]
help = "Run the ruff formatter"
cmd  = "ruff format"

[tool.poe.tasks.format]
help = "Run ruff check and ruff format formatters"
sequence  = ["format_by_checker", "format_by_formatter"]

[tool.poe.tasks.test]
help = "Run tests"
cmd  = "pytest -vv -x"

[tool.poe.tasks.check]
help = "Run all checks on the code base"
sequence = ["lint", "check_format", "types", "test"]